--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 data/*
+all_data/*
 model_checkpoints/*
 mnist_analysis/*
 fold_results/*
@@ -8,3 +9,5 @@ __pycache__/*
 transform_mnist_10_segments_cb.pt
 transform_mnist_10_segments_normal.pt
 mnist_analysis.zip
+all_data.zip
+model_meanfield_viepsilon.py
