--- a/requirements.txt
+++ b/requirements.txt
@@ -1,215 +1,523 @@
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.10
-aiosignal==1.2.0
-alabaster==0.7.16
-arrow==1.3.0
-astroid==3.3.8
-asttokens==3.0.0
-async-timeout==5.0.1
-asyncssh==2.17.0
+absl-py==1.4.0
+aimodelshare==0.1.5
+aiohttp==3.8.4
+aiohttp-cors==0.7.0
+aiorwlock==1.3.0
+aiosignal==1.3.1
+alabaster==0.7.12
+alembic==1.12.0
+ansi2html==1.8.0
+ansicon==1.89.0
+antlr4-python3-runtime==4.9.3
+anyio==3.7.1
+appdirs==1.4.4
+argh==0.26.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+astroid==2.14.2
+astropy==5.1
+asttokens==2.0.5
+astunparse==1.6.3
+async-timeout==4.0.2
 atomicwrites==1.4.0
 attrs==24.3.0
-autopep8==2.0.4
-babel==2.16.0
-backports.tarfile==0.0.0
-beautifulsoup4==4.12.3
+Automat==20.2.0
+autopep8==1.5.6
+Babel==2.11.0
+backcall==0.2.0
+bcrypt==3.2.0
+beautifulsoup4==4.11.1
 binaryornot==0.4.4
-black==24.10.0
-bleach==6.2.0
-Brotli==1.0.9
-cattrs==25.1.0
-certifi==2025.4.26
-cffi==1.17.1
+black==22.6.0
+bleach==4.1.0
+blessed==1.20.0
+bokeh==2.4.3
+boto3==1.26.69
+botocore==1.29.82
+Bottleneck==1.3.5
+Brotli==1.1.0
+brotlipy==0.7.0
+cachetools==5.3.1
+catboost==1.2.3
+category-encoders==2.6.1
+causal-learn==0.1.3.7
+certifi==2024.12.14
+cffi==1.15.1
 chardet==4.0.0
-charset-normalizer==3.3.2
-click==8.1.8
-cloudpickle==3.0.0
+charset-normalizer==2.0.4
+check-shapes==1.1.1
+clarabel==0.7.1
+click==8.0.4
+cloudpickle==2.0.0
+cmaes==0.10.0
 colorama==0.4.6
-comm==0.2.1
-contourpy==1.3.2
-cookiecutter==2.6.0
-cryptography==44.0.1
-cycler==0.12.1
-debugpy==1.8.11
+colorcet==3.0.1
+coloredlogs==15.0.1
+colorful==0.5.5
+colorlog==6.7.0
+comm==0.1.2
+constantly==15.1.0
+contourpy==1.0.5
+cookiecutter==1.7.3
+cryptography==39.0.1
+cssselect==1.1.0
+cvxopt==1.3.2
+cvxpy==1.4.2
+cycler==0.11.0
+Cython==3.0.5
+cytoolz==0.12.0
+daal4py==2023.0.2
+dash==2.13.0
+dash-core-components==2.0.0
+dash-cytoscape==0.3.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+dask==2022.7.0
+datashader==0.14.4
+datashape==0.5.4
+dcor==0.6
+debugpy==1.5.1
 decorator==5.1.1
 defusedxml==0.7.1
-Deprecated==1.2.13
+Deprecated==1.2.14
 diff-match-patch==20200713
-dill==0.3.8
-distro==1.9.0
+dill==0.3.7
+distlib==0.3.7
+distributed==2022.7.0
+distutils-pytest==0.2.1
+dm-tree==0.1.8
+docker==5.0.0
+docker-pycreds==0.4.0
+docopt==0.6.2
 docstring-to-markdown==0.11
-docutils==0.21.2
-exceptiongroup==1.2.0
+docutils==0.18.1
+dropstackframe==0.1.0
+ecos==2.0.12
+einops==0.6.1
+emcee==3.1.6
+emukit==0.4.10
+entrypoints==0.4
+et-xmlfile==1.1.0
+exceptiongroup==1.1.3
 executing==0.8.3
-fastjsonschema==2.20.0
-filelock==3.13.1
-flake8==7.1.1
-fonttools==4.58.1
-frozenlist==1.5.0
-fsspec==2024.6.1
-getmac==0.9.5
-idna==3.7
+fancyimpute==0.7.0
+fastapi==0.103.2
+fastjsonschema==2.16.2
+fastshap-torch==0.0.1
+fdasrsf==2.3.6
+feather-format==0.4.1
+filelock==3.9.0
+findblas==0.1.26.post1
+findiff==0.10.0
+fire==0.5.0
+flake8==3.9.0
+Flask==2.2.2
+flatbuffers==23.5.26
+flit_core==3.6.0
+fonttools==4.25.0
+frozenlist==1.3.3
+fsspec==2022.11.0
+future==0.18.3
+gast==0.4.0
+gensim==4.3.0
+gevent==23.9.1
+gitdb==4.0.10
+GitPython==3.1.31
+google-api-core==2.12.0
+google-auth==2.21.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+googleapis-common-protos==1.60.0
+gpflow==2.9.2
+gpustat==1.1.1
+GPy==1.12.0
+gpytorch==1.12
+graphviz==0.20.1
+greenlet==3.1.1
+grpcio==1.56.0
+h11==0.14.0
+h5py==3.7.0
+HeapDict==1.0.1
+holoviews==1.15.4
+huggingface-hub==0.10.1
+humanfriendly==10.0
+hvplot==0.8.2
+hyperlink==21.0.0
+idna==3.4
+imagecodecs==2021.8.26
+imageio==2.26.0
 imagesize==1.4.1
-importlib_metadata==8.5.0
+imbalanced-learn==0.10.1
+importlib-metadata==4.11.3
+importlib-resources==5.10.0
+incremental==21.3.0
+inflate64==1.0.0
 inflection==0.5.1
+iniconfig==1.1.1
+intake==0.6.7
+interpret==0.4.4
+interpret-core==0.4.4
 intervaltree==3.1.0
-ipykernel==6.29.5
-ipython==8.30.0
-isort==6.0.1
-jaraco.classes==3.2.1
-jaraco.context==0.0.0
-jaraco.functools==4.1.0
-jedi==0.19.2
-jellyfish==1.1.3
-Jinja2==3.1.4
-joblib==1.5.1
-jsonschema==4.23.0
-jsonschema-specifications==2023.7.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyterlab_pygments==0.3.0
-keyring==25.6.0
-kiwisolver==1.4.8
-llvmlite==0.44.0
-markdown-it-py==2.2.0
-MarkupSafe==2.1.5
-matplotlib==3.10.3
+ipykernel==6.19.2
+ipython==8.10.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.5
+isort==5.9.3
+itemadapter==0.3.0
+itemloaders==1.0.4
+itsdangerous==2.0.1
+jaxtyping==0.2.19
+jedi==0.17.2
+jellyfish==0.9.0
+Jinja2==3.1.2
+jinja2-time==0.2.0
+jinxed==1.2.0
+jmespath==0.10.0
+joblib==1.2.0
+json5==0.9.6
+jsonpatch==1.33
+jsonpointer==2.4
+jsonschema==4.17.3
+jupyter==1.0.0
+jupyter_client==7.3.4
+jupyter-console==6.6.2
+jupyter_core==5.2.0
+jupyter-server==1.23.4
+jupyterlab==3.5.3
+jupyterlab-pygments==0.1.2
+jupyterlab_server==2.19.0
+jupyterlab-widgets==1.0.0
+kaleido==0.2.1
+keras==2.13.1
+Keras-Preprocessing==1.1.2
+keras2onnx==1.7.0
+keyring==23.4.0
+kiwisolver==1.4.4
+knnimpute==0.1.0
+lark==1.1.9
+lazy_loader==0.4
+lazy-object-proxy==1.6.0
+libclang==16.0.6
+lightgbm==3.3.5
+lightning-utilities==0.9.0
+lime==0.2.0.1
+linear-operator==0.5.2
+llvmlite==0.41.1
+lmdb==1.6.2
+locket==1.0.0
+logomaker==0.8
+lxml==4.9.1
+lz4==3.1.3
+Mako==1.2.4
+Markdown==3.4.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.1
+matplotlib==3.3.4
 matplotlib-inline==0.1.6
-mccabe==0.7.0
-mdurl==0.1.0
-meshzoo==0.11.6
-mistune==3.1.2
-more-itertools==10.3.0
-mpmath==1.3.0
-multidict==6.1.0
-mypy-extensions==1.0.0
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.3
-numba==0.61.2
-numpy==2.1.2
-numpydoc==1.7.0
-packaging==24.2
-pandas==2.2.3
+matplotlib-venn==0.11.10
+mccabe==0.6.1
+mdurl==0.1.2
+menuinst==1.4.19
+mistune==0.8.4
+mkl-fft==1.3.8
+mkl-random==1.2.4
+mkl-service==2.4.0
+mlai==0.1.2
+mlxtend==0.22.0
+mock==4.0.3
+mpmath==1.2.1
+msgpack==1.0.3
+multidict==6.0.4
+multimethod==1.11
+multipledispatch==0.6.0
+multiprocess==0.70.15
+multivolumefile==0.2.3
+munkres==1.1.4
+mypy-extensions==0.4.3
+nbclassic==0.5.2
+nbclient==0.5.13
+nbconvert==6.5.4
+nbformat==5.7.0
+nest-asyncio==1.5.6
+networkx==2.8.4
+nltk==3.7
+normflows==1.7.3
+nose==1.3.7
+notebook==6.5.2
+notebook_shim==0.2.2
+notutils==0.0.1
+numba==0.58.1
+numexpr==2.8.4
+numpy==1.24.3
+numpydoc==1.6.0
+nvidia-ml-py==12.535.108
+oauthlib==3.2.2
+omegaconf==2.3.0
+onnx==1.13.1
+onnxconverter-common==1.13.0
+onnxmltools==1.11.2
+onnxruntime==1.16.2
+opencensus==0.11.3
+opencensus-context==0.1.3
+opencv-python==4.8.0.76
+openpyxl==3.0.10
+opt-einsum==3.3.0
+optuna==3.3.0
+orjson==3.10.15
+osqp==0.6.3
+outcome==1.3.0.post0
+packaging==22.0
+pandas==1.5.3
 pandocfilters==1.5.0
-parso==0.8.4
+panel==0.14.3
+param==1.12.3
+paramiko==2.8.1
+paramz==0.9.6
+parsel==1.6.0
+parso==0.7.0
+partd==1.2.0
+pathlib==1.0.1
 pathspec==0.10.3
+pathtools==0.1.2
+patsy==0.5.3
+pep8==1.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
-pillow==11.0.0
-pip==25.1
-platformdirs==4.3.7
-pluggy==1.5.0
+Pillow==9.4.0
+pip==22.3.1
+pipreqs==0.4.13
+pkgutil_resolve_name==1.3.10
+platformdirs==2.5.2
+playwright==1.48.0
+plotly==5.14.1
+pluggy==1.0.0
 ply==3.11
-pooch==1.8.2
-prompt-toolkit==3.0.43
-propcache==0.3.1
-psutil==5.9.0
+pods==0.1.14
+pooch==1.4.0
+POT==0.9.1
+poyo==0.5.0
+prettytable==3.11.0
+prometheus-client==0.14.1
+prompt-toolkit==3.0.36
+Protego==0.1.16
+protobuf==3.20.3
+psutil==5.9.6
+ptdec==1.0
+ptsdae==1.0
 ptyprocess==0.7.0
 pure-eval==0.2.2
-py-machineid==0.8.0
-pycodestyle==2.12.1
+py==1.11.0
+py-spy==0.3.14
+py7zr==0.20.8
+pyarrow==6.0.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pybcj==1.0.2
+pybind11==2.11.1
+pycodestyle==2.6.0
+pycox==0.3.0
 pycparser==2.21
+pycryptodomex==3.19.0
+pyct==0.5.0
+pycurl==7.45.1
+pydantic==1.10.13
+PyDispatcher==2.0.5
 pydocstyle==6.3.0
-pyflakes==3.2.0
-PyGithub==2.4.0
-Pygments==2.19.1
-PyJWT==2.10.1
-pylint==3.3.5
-pylint-venv==3.0.3
-pyls-spyder==0.4.0
+pyDOE==0.3.8
+pydot==1.3.0
+pyee==12.0.0
+pyerfa==2.0.0
+pyflakes==2.2.0
+Pygments==2.15.1
+PyHamcrest==2.0.2
+PyJWT==2.8.0
+pylint==2.16.2
+pylint-venv==2.3.0
+pyls-black==0.4.6
+pyls-spyder==0.3.2
+Pympler==0.9
 PyNaCl==1.5.0
-pyparsing==3.2.3
-PyQt5==5.15.10
-PyQt5_sip==12.13.0
-PyQtWebEngine==5.15.6
+pynndescent==0.5.10
+pyodbc==4.0.34
+pyOpenSSL==23.0.0
+pypalettes==0.1.2
+pyparsing==3.0.9
+pypdftk==0.5
+pyppmd==1.1.0
+PyQt5-sip==12.11.0
+pyreadline3==3.4.1
+pyrsistent==0.18.0
 PySocks==1.7.1
-python-dateutil==2.9.0.post0
-python-lsp-black==2.0.0
-python-lsp-jsonrpc==1.1.2
-python-lsp-server==1.12.2
-python-package-info==0.0.15
+pytest==7.1.2
+python-dateutil==2.8.2
+python-jsonrpc-server==0.4.0
+python-language-server==0.36.2
+python-lsp-jsonrpc==1.0.0
 python-slugify==5.0.2
-pytoolconfig==1.2.6
-pytz==2025.2
-pyuca==1.2
-pyvista==0.45.2
-pywin32==308
-pywin32-ctypes==0.2.2
-PyYAML==6.0.2
-pyzmq==26.2.0
-QDarkStyle==3.2.3
+python-snappy==0.6.1
+pytoolconfig==1.2.5
+pytorch-lightning==1.9.5
+pytorch-tabnet==4.0
+pytorch-tabular==1.0.2
+pytz==2022.7
+pyviz-comms==2.0.2
+PyWavelets==1.4.1
+pywin32==227
+pywin32-ctypes==0.2.0
+pywinpty==2.0.10
+PyYAML==6.0
+pyzmq==23.2.0
+pyzstd==0.15.9
+QDarkStyle==2.8.1
+qdldl==0.1.7.post0
 qstylizer==0.2.2
-QtAwesome==1.4.0
-qtconsole==5.6.1
-QtPy==2.4.1
-referencing==0.30.2
-requests==2.32.3
-requests-cache==1.2.1
-rich==13.9.4
-rich-argparse==1.7.1
-rope==1.13.0
-rpds-py==0.22.3
+QtAwesome==1.2.2
+qtconsole==5.4.0
+QtPy==2.2.0
+queuelib==1.5.0
+ray==2.7.0
+rdata==0.10.0
+regex==2022.7.9
+requests==2.28.1
+requests-file==1.5.1
+requests-oauthlib==1.3.1
+retrying==1.3.4
+rich==13.4.2
+rope==1.7.0
+rsa==4.9
 Rtree==1.0.1
-scikit-learn==1.6.1
-scipy==1.15.3
-scooby==0.10.1
-seaborn==0.13.2
-setuptools==78.1.1
-shap==0.47.2
-sip==6.7.12
-six==1.17.0
-slicer==0.0.8
+s3transfer==0.6.2
+sage-importance==0.0.6
+SALib==1.4.7
+scikit-datasets==0.2.4
+scikit-fda==0.9
+scikit-image==0.19.3
+scikit-learn==1.3.2
+scikit-learn-intelex==20230228.214506
+scikit-survival==0.22.1
+scipy==1.10.1
+Scrapy==2.8.0
+scs==3.2.4.post1
+seaborn==0.12.2
+selenium==4.27.1
+Send2Trash==1.8.0
+sentry-sdk==1.27.0
+service-identity==18.1.0
+setproctitle==1.3.2
+setuptools==65.6.3
+shap==0.42.1
+shapley-regression==0.0.1
+shortuuid==1.0.11
+sip==4.19.13
+six==1.16.0
+skl2onnx==1.15.0
+skope-rules==1.0.1
+slicer==0.0.7
+smart-open==5.2.1
+smmap==5.0.0
+sniffio==1.3.1
 snowballstemmer==2.2.0
+sodapy==2.2.0
 sortedcontainers==2.4.0
-soupsieve==2.5
-Sphinx==7.3.7
-sphinxcontrib-applehelp==2.0.0
-sphinxcontrib-devhelp==2.0.0
-sphinxcontrib-htmlhelp==2.1.0
+soupsieve==2.3.2.post1
+Sphinx==5.0.2
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
 sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==2.0.0
-sphinxcontrib-serializinghtml==2.0.0
-spyder==6.0.5
-spyder-kernels==3.0.3
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+spyder==4.2.5
+spyder-kernels==1.10.2
+SQLAlchemy==1.4.39
 stack-data==0.2.0
-stonefish-license-manager==0.5.35
-superqt==0.7.3
-sympy==1.13.3
-tabulate==0.9.0
+starlette==0.27.0
+statsmodels==0.13.5
+sympy==1.11.1
+tables==3.7.0
+tabulate==0.8.10
+TBB==0.2
+tblib==1.7.0
+tenacity==8.0.1
+tensorboard==2.13.0
+tensorboard-data-server==0.7.2
+tensorboard-plugin-wit==1.8.1
+tensorboardX==2.6.2.2
+tensordict==0.5.0
+tensorflow==2.13.0
+tensorflow-estimator==2.13.0
+tensorflow-intel==2.13.0
+tensorflow-io-gcs-filesystem==0.31.0
+tensorflow-probability==0.21.0
+termcolor==2.3.0
+terminado==0.17.1
 text-unidecode==1.3
-textdistance==4.6.3
-threadpoolctl==3.6.0
+textdistance==4.2.1
+texttable==1.7.0
+tf2onnx==1.15.1
+threadpoolctl==3.2.0
 three-merge==0.1.1
-tinycss2==1.4.0
+tifffile==2021.7.2
+tikzplotlib==0.10.1
+tinycss2==1.2.1
+tldextract==3.2.0
+tokenizers==0.11.4
+toml==0.10.2
 tomli==2.0.1
-tomlkit==0.13.2
+tomlkit==0.11.1
+toolz==0.12.0
+torch==2.4.1
+torchaudio==2.4.1
+torchmetrics==0.11.4
 torchrl==0.5.0
-torch==2.4.1+cu126
-torchaudio==2.4.0+cu126
-torchvision==0.19.1+cu126
-tornado==6.5
-tqdm==4.67.1
-traitlets==5.14.3
+torchtoolbox==0.1.8.2
+torchtuples==0.2.2
+torchvision==0.19.1
+tornado==6.1
+tqdm==4.64.1
+traitlets==5.7.1
+transformers==4.24.0
+treeinterpreter==0.2.3
+trio==0.27.0
+trio-websocket==0.11.1
+Twisted==22.2.0
+twisted-iocpsupport==1.0.2
+typeguard==2.13.3
 typing_extensions==4.12.2
-tzdata==2025.2
-ujson==5.10.0
-Unidecode==1.3.8
-url-normalize==2.2.1
-urllib3==2.3.0
-vtk==9.4.2
-watchdog==4.0.2
+uci-datasets==1.1.0
+ujson==5.4.0
+umap-learn==0.5.3
+Unidecode==1.2.0
+urllib3==1.26.14
+uvicorn==0.23.2
+virtualenv==20.21.0
+visdom==0.2.4
+w3lib==1.21.0
+wandb==0.13.11
+watchdog==1.0.2
+watchfiles==0.20.0
 wcwidth==0.2.5
+webcolors==24.6.0
 webencodings==0.5.1
+websocket-client==1.8.0
+Werkzeug==2.2.2
+wget==3.2
 whatthepatch==1.0.2
-wheel==0.45.1
+wheel==0.38.4
+widgetsnbextension==3.5.2
 win-inet-pton==1.1.0
-winregistry==2.1.1
-wrapt==1.17.0
-x21==0.5.3
-x22==0.2.1
-yapf==0.40.2
-yarl==1.18.0
-zipp==3.21.0
+wincertstore==0.2
+wrapt==1.14.1
+wsproto==1.2.0
+xarray==2022.11.0
+xgboost==1.7.6
+xlrd==2.0.1
+xlwings==0.29.1
+yapf==0.31.0
+yarg==0.1.9
+yarl==1.9.2
+zict==2.1.0
+zipp==3.11.0
+zope.event==5.0
+zope.interface==5.4.0
